<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="my">我的</string>
    <string name="home">首页</string>
    <string name="big_money_friend">大钱友</string>
    <string name="quick_money_friend">快钱友</string>
    <string name="exit">再按一次退出程序</string>
    <string name="scan">扫一扫</string>
    <string name="search_hint_text">搜索关键字</string>
    <string name="message">消息</string>
    <string name="exempting_money_friend">免钱友</string>
    <string name="more_red_envelopes">更多\n红包</string>
    <string name="have_money">有钱榜</string>
    <string name="more">更多</string>
    <string name="setting">设置</string>
    <string name="my_present">我的礼品</string>
    <string name="my_noun">我的余额</string>
    <string name="my_cash">我的返现</string>
    <string name="binding_phone">绑定手机</string>
    <string name="my_cherry_blossoms">我的樱花</string>
    <string name="add_investment">添加投资</string>
    <string name="inviting_friends">邀请好友</string>
    <string name="my_card_voucher">我的卡券</string>
    <string name="customer_service">QQ客服</string>
    <string name="loading" tools:ignore="TypographyEllipsis">加载中...</string>
    <string name="my_love_red">我爱红包</string>
    <string name="join_the_book">加入账本</string>
    <string name="calculator">计算器</string>
    <string name="integral_center">积分中心</string>
    <string name="sign_in">每日签到</string>




    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="errcode_ban">签名配置与app实际的签名不匹配</string>
</resources>
