<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.pize.cashboy.view.CustViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <com.ogaclejapan.smarttablayout.SmartTabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="58px"
        android:background="@color/white"
        app:stl_distributeEvenly="true"
        app:stl_dividerThickness="0dp"
        app:stl_indicatorColor="@color/transparent"
        app:stl_indicatorThickness="0dp"
        app:stl_underlineColor="@color/transparent"
        app:stl_underlineThickness="0dp">

    </com.ogaclejapan.smarttablayout.SmartTabLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10px"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/textSize_small_10" />

        <TextView
            android:id="@+id/tv_big_money_friend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10px"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/big_money_friend"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/textSize_small_10" />


        <TextView
            android:id="@+id/tv_quick_money_friend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10px"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/quick_money_friend"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/textSize_small_10" />

        <TextView
            android:id="@+id/tv_my"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10px"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/my"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/textSize_small_10" />
    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>
