<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_E7E7E7"
    android:scrollbars="none">

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_AACD03"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="10px"
            android:paddingLeft="20px"
            android:paddingRight="20px"
            android:paddingTop="10px">

            <TextView
                android:id="@+id/tv_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10px"
                android:drawablePadding="5px"
                android:drawableTop="@mipmap/ic_scan"
                android:text="@string/scan"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_small_10" />

            <com.pize.cashboy.view.ClearEditText
                android:id="@+id/et_search_view"
                android:layout_width="0px"
                android:layout_height="60px"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:layout_toRightOf="@id/tv_scan"
                android:layout_weight="1"
                android:background="@drawable/et_round_bg"
                android:drawableLeft="@mipmap/ic_action_search_small"
                android:drawablePadding="5dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical"
                android:hint="@string/search_hint_text"
                android:imeOptions="actionSearch"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textColor="@color/color_gray"
                android:textColorHint="@color/color_darker_gray"
                android:textCursorDrawable="@drawable/et_cursor"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10px"
                android:drawablePadding="5px"
                android:drawableTop="@mipmap/ic_message"
                android:text="@string/message"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_small_10" />

        </com.zhy.autolayout.AutoLinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="270px"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_banner" />

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="20px">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/ic_head_1"
                android:gravity="center"
                android:text="@string/big_money_friend"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/textSize_content" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/ic_head_2"
                android:gravity="center"
                android:text="@string/quick_money_friend"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/textSize_content" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/ic_head_3"
                android:gravity="center"
                android:text="@string/exempting_money_friend"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/textSize_content" />
        </com.zhy.autolayout.AutoLinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_E7E7E7" />

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="20px">

            <ImageView
                android:id="@+id/iv_headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_headline" />

            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.zhy.autolayout.AutoLinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30px"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/text_soild_red"
                        android:padding="5px"
                        android:text="热议"
                        android:textColor="@color/color_EF5555"
                        android:textSize="@dimen/textSize_small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10px"
                        android:text="@string/quick_money_friend"
                        android:textColor="@color/color_666666"
                        android:textSize="@dimen/textSize_small" />
                </com.zhy.autolayout.AutoLinearLayout>

                <com.zhy.autolayout.AutoLinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30px"
                    android:layout_marginTop="10px"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/text_soild_red"
                        android:padding="5px"
                        android:text="热议"
                        android:textColor="@color/color_EF5555"
                        android:textSize="@dimen/textSize_small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10px"
                        android:text="@string/quick_money_friend"
                        android:textColor="@color/color_666666"
                        android:textSize="@dimen/textSize_small" />
                </com.zhy.autolayout.AutoLinearLayout>

            </com.zhy.autolayout.AutoLinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20px"
                android:src="@mipmap/ic_more" />
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="20px">

            <ImageView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginRight="20px"
                android:layout_weight="1"
                android:src="@mipmap/ic_red_envelopes" />

            <ImageView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginRight="20px"
                android:layout_weight="1"
                android:src="@mipmap/ic_red_envelopes" />

            <ImageView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginRight="20px"
                android:layout_weight="1"
                android:src="@mipmap/ic_red_envelopes" />

            <ImageView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginRight="20px"
                android:layout_weight="1"
                android:src="@mipmap/ic_red_envelopes" />

            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_soild_gray"
                android:gravity="center"
                android:text="@string/more_red_envelopes" />
        </com.zhy.autolayout.AutoLinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_girlfriend" />

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="20px"
            android:paddingLeft="50px"
            android:paddingRight="50px"
            android:paddingTop="20px">

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_centerInParent="true"
                android:background="@color/color_E7E7E7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/white"
                android:drawableLeft="@mipmap/ic_golden_cup"
                android:drawablePadding="10px"
                android:paddingLeft="50px"
                android:paddingRight="50px"
                android:gravity="center"
                android:text="@string/have_money"
                android:textColor="@color/color_666666" />
        </com.zhy.autolayout.AutoRelativeLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="20px">
            <android.support.v7.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_have_moeny">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/ic_more"
                android:text="@string/more"
                android:textSize="@dimen/textSize_small_10"
                android:gravity="center" />
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>
</ScrollView>